--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <nav><a href="#" id="homeLink">Home</a></nav>
         <nav><a href="about.html" id="About">About</a></nav>
         <nav><a href="contact.html" id="Contact">Contact</a></nav>
+        <button id="themeBtn" class="small-btn">Toggle</button>
       </div>
     </header>
     <section class="controls">
@@ -95,7 +96,6 @@
       </aside>
     </div>
   </div>
-  
   <script src="index.js"></script>
 </body>
 </html>
