--- a/contact.html
+++ b/contact.html
@@ -167,10 +167,11 @@
             </form>
         </div>
     </div>
-    <script>
+<!--     <script>
         const scriptURL = "https://script.google.com/macros/s/AKfycbw0nh_EAULT2admVG3LxzDUe-j49bxYZnWPNCWLOgWq0R2kIo3MjqaYvmyN1s5rGhj1/exec"; // अपना URL डालो
 
-    </script>
+    </script> -->
 </body>
+
 
 </html>
