--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <title>Weather App</title>
 <link rel="icon" href="data:,W">
 <link rel="stylesheet" href="index.css">
+<!-- Inline favicon with "A" -->
+<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23007BFF'/><text x='50' y='65' font-size='60' font-family='Arial, border-radios=20, sans-serif' fill='white' text-anchor='middle'>W</text></svg>">
+
 </head>
 <body>
     <div class="weather-effect"></div>
