--- a/contact.html
+++ b/contact.html
@@ -88,10 +88,6 @@
             transition: transform 0.2s;
         }
 
-        button:hover {
-            
-        }
-
         header {
             position: absolute;
             top: 0px;
@@ -149,29 +145,27 @@
 
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_template" value="table">
-                <input type="hidden" name="_next" value="https://ayush-ascapdx.github.io/thankyou.html">
+                <input type="hidden" name="_next" value="https://ayush-ascapdx.github.io/weather/thankyou.html">
+
 
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" placeholder="Enter your name" required>
+                    <input type="text" name="name" id="name" placeholder="Enter your name" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" placeholder="Enter your email" required>
+                    <input type="email" name="email" id="email" placeholder="Enter your email" required>
                 </div>
                 <div class="form-group">
                     <label for="message">Message</label>
-                    <textarea id="message" placeholder="send your message..." required></textarea>
+                    <textarea id="message" name="message" placeholder="send your message..." required></textarea>
                 </div>
                 <button type="submit">Send</button>
             </form>
         </div>
     </div>
-<!--     <script>
-        const scriptURL = "https://script.google.com/macros/s/AKfycbw0nh_EAULT2admVG3LxzDUe-j49bxYZnWPNCWLOgWq0R2kIo3MjqaYvmyN1s5rGhj1/exec"; // अपना URL डालो
-
-    </script> -->
+    <script>
+    </script>
 </body>
-
 
 </html>
