--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@
     <div class="container">
         <div class="card">
             <h2>Contact Us</h2>
-            <form action="https://formsubmit.co/zigar1499@gmail.com" method="POST">
+            <form action="https://formsubmit.co/zigar1499@gmail.com" method="POST" />
 
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_template" value="table">
@@ -169,3 +169,4 @@
 </body>
 
 </html>
+
