--- a/about.html
+++ b/about.html
@@ -440,7 +440,7 @@ footer{
     <form action="https://formsubmit.co/zigar1499@gmail.com" method="POST" />
      <input type="text" name="name"  placeholder="Your Name" required>
     <input type="email" name="email"  placeholder="Your Email" required>
-    <textarea rows="4" placeholder="Your Message" required></textarea>
+    <textarea rows="4" name="massg" placeholder="Your Message" required></textarea>
     <button type="submit">Send</button>
       </form>
   </section>
@@ -480,4 +480,5 @@ function goToProjects(){
 
 </body>
 </html>
+
 
