--- a/contact.html
+++ b/contact.html
@@ -139,34 +139,41 @@
         <h1>Weather App</h1>
     </header>
     <div class="container">
-        <div class="card">
-            <h2>Contact Us</h2>
-            <form action="https://formsubmit.co/zigar1499@gmail.com" method="POST" />
+  <div class="card">
+    <h2>Contact Us</h2>
 
-                <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_template" value="table">
-                <input type="hidden" name="_next" value="https://ayush-ascapdx.github.io/weather/thankyou.html">
+    <form action="https://formsubmit.co/zigar1499@gmail.com" method="POST">
 
+      <!-- FormSubmit settings -->
+      <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_template" value="table">
+      <input type="hidden" name="_next" value="https://ayush-ascapdx.github.io/weather/thankyou.html">
 
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" name="name" id="name" placeholder="Enter your name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" placeholder="Enter your email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" placeholder="send your message..." required></textarea>
-                </div>
-                <button type="submit">Send</button>
-            </form>
-        </div>
-    </div>
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name" placeholder="Enter your name" required>
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" placeholder="Enter your email" required>
+      </div>
+
+      <div class="form-group">
+        <label for="message">Message</label>
+        <textarea id="message" name="message" placeholder="Send your message..." required></textarea>
+      </div>
+
+      <button type="submit">Send</button>
+
+    </form>
+  </div>
+</div>
+
     <script>
     </script>
 </body>
 
 </html>
+
 
