--- a/contact.html
+++ b/contact.html
@@ -147,7 +147,7 @@
       <!-- FormSubmit settings -->
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_template" value="table">
-      <input type="hidden" name="_next" value="https://ayush-ascapdx.github.io/weather/thankyou.html">
+      <input type="hidden"  value="https://ayush-ascapdx.github.io/weather/thankyou.html">
 
       <div class="form-group">
         <label for="name">Name</label>
@@ -175,5 +175,6 @@
 </body>
 
 </html>
+
 
 
