--- a/about.html
+++ b/about.html
@@ -437,12 +437,10 @@ footer{
   <!-- CONTACT -->
   <section class="section contact">
     <h2>Contact Us</h2>
-    <form action="https://formsubmit.co/zigar1499@gmail.com" method="POST" />
-     <input type="text" name="name"  placeholder="Your Name" required>
-    <input type="email" name="email"  placeholder="Your Email" required>
-    <textarea rows="4" name="massg" placeholder="Your Message" required></textarea>
-    <button type="submit">Send</button>
-      </form>
+    <input type="text" placeholder="Your Name">
+    <input type="email" placeholder="Your Email">
+    <textarea rows="4" placeholder="Your Message"></textarea>
+    <button>Send Message</button>
   </section>
 
 </div>
@@ -480,5 +478,3 @@ function goToProjects(){
 
 </body>
 </html>
-
-
