--- a/contact.html
+++ b/contact.html
@@ -141,26 +141,22 @@
     <div class="container">
         <div class="card">
             <h2>Contact Us</h2>
-            <form action="https://formsubmit.co/zigar1499@gmail.com" method="POST">
-
-                
-                <input type="hidden" name="_next" value="https://ayush-ascapdx.github.io/weather/thankyou.html">
-
-
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" name="name" id="name" placeholder="Enter your name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" placeholder="Enter your email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" placeholder="send your message..." required></textarea>
-                </div>
-                <button type="submit">Send</button>
-            </form>
+            <form target="_blank" action="https://formsubmit.co/zigar1499@gmail.com" method="POST">
+    <div class="form-group">
+      <div class="form-row">
+        <div class="col">
+          <input type="text" name="name" class="form-control" placeholder="Full Name" required>
+        </div>
+        <div class="col">
+          <input type="email" name="email" class="form-control" placeholder="Email Address" required>
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
+    </div>
+    <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
+  </form>
         </div>
     </div>
     <script>
@@ -168,4 +164,5 @@
 </body>
 
 </html>
+
 
