--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@
     <div class="container">
         <div class="card">
             <h2>Contact Us</h2>
-            <form target="_blank" action="https://formsubmit.co/zigar1499@gmail.com" method="POST">
+            <form target="_blank" action="https://formsubmit.co/kesgya12345@gmail.com" method="POST">
     <div class="form-group">
       <div class="form-row">
         <div class="col">
@@ -164,5 +164,6 @@
 </body>
 
 </html>
+
 
 
